--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -4,6 +4,7 @@
 
 :root {
   --maxWidth: 1140px;
+  --icon-wh: 24px;
 
   scroll-behavior: smooth;
 
@@ -274,60 +275,5 @@ button {
     border-bottom: 1px dotted currentColor;
     text-decoration: none;
     color: grey;
-  }
-}
-
-/* Warning ---------------------------*/
-.warning {
-  display: none;
-
-  @nest .no-support & {
-    display: grid;
-    place-content: center;
-
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: #0008;
-  }
-}
-
-.warning__content {
-  position: relative;
-  padding: 100px 20px 20px;
-  box-shadow: 0 23px 50px -13px rgba(0, 0, 0, 0.3);
-  background: #fff;
-}
-
-.warning__content__jeff {
-  --wh: 200px;
-
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translate3D(-50%, -50%, 0);
-  width: var(--wh);
-  height: var(--wh);
-  border: 3px solid #fff;
-  border-radius: var(--wh);
-}
-
-.warning__features {
-  list-style: none;
-  text-align: justify;
-}
-
-.feature {
-  &::before {
-    content: "\2611";
-  }
-}
-.feature--unsupported {
-  &::before {
-    content: "\2610";
   }
 }
