Use data attributes to define gradient stops
Switching between class names is restrictive: it doesn't allow us to
dynamically update the UI based on content.

Defining values on data attributes per image colocates gradient
definitions with the image they accompany, meaning that we can now add as
many "slides" as we like, in any order we want.

Additionally
- Changed property names to be more accurate
- Simplified feature detection

--- a/src/styles/fallback.pcss
+++ b/src/styles/fallback.pcss
@@ -30,14 +30,10 @@
 
   position: relative;
   max-width: 440px;
+  margin: 0 20px;
   padding: var(--pt) 40px 20px;
   box-shadow: 0 23px 50px -13px rgba(0, 0, 0, 0.6);
   background: #fff;
-
-  & a {
-    border-bottom: 1px dotted currentColor;
-    text-decoration: none;
-  }
 }
 
 .fallback__jeff {
@@ -90,4 +86,9 @@
   & .feature__icon--unsupported {
     background: red;
   }
+}
+
+.feature__link {
+  text-decoration: none;
+  border-bottom: 1px dotted;
 }
