--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -7,19 +7,6 @@
   --icon-wh: 24px;
 
   scroll-behavior: smooth;
-
-  &.jeff0 {
-    --gradientLeft: #61bfd9;
-    --gradientRight: #0551b4;
-  }
-  &.jeff1 {
-    --gradientLeft: #15AF88;
-    --gradientRight: #6C429A;
-  }
-  &.jeff2 {
-    --gradientLeft: #EEA031;
-    --gradientRight: #930560;
-  }
 }
 
 body {
@@ -52,12 +39,13 @@ button {
 }
 
 .app__header {
-  transition: --gradientLeft 3s, --gradientRight 3s;
+  will-change: background-image;
+  transition: --gradientStart 3s, --gradientEnd 3s;
 
   background-image: linear-gradient(
     242deg,
-    var(--gradientLeft) 16%,
-    var(--gradientRight) 67%
+    var(--gradientStart) 16%,
+    var(--gradientEnd) 67%
   );
 }
 
@@ -100,7 +88,6 @@ button {
 
   @media (--mq-l) {
     top: 60px;
-    left: -30px;
     opacity: 1;
     box-shadow: 0 48px 64px -24px rgba(0, 0, 0, 0.3);
   }
@@ -141,11 +128,7 @@ button {
   margin: 70px 30px 100px;
   
   @media(--mq-m) {
-    margin: 80px 0 100px;
-    padding: 0;
-  }
-  @media(--mq-1) {
-    padding: 0 0 0 25%;
+    margin: 80px 0 90px;
   }
 }
 
@@ -161,12 +144,19 @@ button {
 }
 
 .description__strapline {
-  margin: 7px 0 0;
+  margin: 7px 0 0 auto;
   font-size: 24px;
   font-weight: 500;
 
+  @media(--mq-m) {
+    // margin: 7px 0 0 240px;
+    width: 40%;
+    font-size: 28px;
+  }
+
   @media (--mq-l) {
-    margin: 7px 0 0 496px;
+    // margin: 7px 0 0 496px;
+    width: 50%;
     font-size: 39px;
     text-align: left;
     opacity: 0.7;
@@ -215,7 +205,7 @@ button {
   padding: 0.5em 1em;
 
   & > span {
-    display: block;
+    display: inline-block;
   }
   
   @media (--mq-m) {
@@ -231,20 +221,20 @@ button {
 }
 
 .jeffness__input {
-  transition: --gradientRight 1s;
+  transition: --gradientEnd 1s;
 
   width: 2em;
-  border: 1px solid var(--gradientRight);
+  border: 1px solid var(--gradientEnd);
   border-radius: 3px;
   text-align: center;
 }
 
 .jeffness__btn {
-  transition: --gradientRight 1s;
+  transition: --gradientEnd 1s;
 
   /* Add 2px to account for border on input */
   padding: calc(0.5em + 2px);
-  background: var(--gradientRight);
+  background: var(--gradientEnd);
   color: #fff;
 
   @media (--mq-l) {
