--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -6,6 +6,10 @@
   --maxWidth: 1140px;
   --icon-wh: 24px;
 
+  will-change: scroll-position;
+
+  height: 100vh;
+  overflow: hidden;
   scroll-behavior: smooth;
 }
 
@@ -44,8 +48,8 @@ button {
 
   background-image: linear-gradient(
     242deg,
-    var(--gradientStart) 16%,
-    var(--gradientEnd) 67%
+    var(--gradientStart, #61BFD9) 16%,
+    var(--gradientEnd, #0551B4) 67%
   );
 }
 
@@ -125,7 +129,7 @@ button {
 }
 
 .description {
-  margin: 70px 30px 100px;
+  margin: 50px 30px 90px;
   
   @media(--mq-m) {
     margin: 80px 0 90px;
@@ -148,14 +152,16 @@ button {
   font-size: 24px;
   font-weight: 500;
 
+  @media(--mq-s) {
+    width: 60%;
+  }
+
   @media(--mq-m) {
-    // margin: 7px 0 0 240px;
     width: 40%;
     font-size: 28px;
   }
 
   @media (--mq-l) {
-    // margin: 7px 0 0 496px;
     width: 50%;
     font-size: 39px;
     text-align: left;
@@ -224,7 +230,7 @@ button {
   transition: --gradientEnd 1s;
 
   width: 2em;
-  border: 1px solid var(--gradientEnd);
+  border: 1px solid var(--gradientEnd, #0551B4);
   border-radius: 3px;
   text-align: center;
 }
@@ -234,7 +240,7 @@ button {
 
   /* Add 2px to account for border on input */
   padding: calc(0.5em + 2px);
-  background: var(--gradientEnd);
+  background: var(--gradientEnd, #0551B4);
   color: #fff;
 
   @media (--mq-l) {
@@ -266,4 +272,8 @@ button {
     text-decoration: none;
     color: grey;
   }
+}
+
+.acknowledgements__content {
+  margin: 0 40px;
 }
