--- a/src/styles/fallback.pcss
+++ b/src/styles/fallback.pcss
@@ -3,8 +3,10 @@
     opacity: 0;
     transform: translate3D(0, 5%, 0);
   }
-  100% {
+  50% {
     opacity: 1;
+  }
+  100% {
     transform: translate3D(0, 0, 0);
   }
 }
@@ -26,7 +28,7 @@
   --wh: 150px;
   --pt: calc(var(--wh) / 2);
   
-  animation: fade-in 1s forwards;
+  animation: fade-in 3s forwards;
 
   position: relative;
   max-width: 440px;
