--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -42,6 +42,7 @@ button {
   z-index: 1;
 }
 
+/* App header ----------------------------------------------------------------*/
 .app__header {
   will-change: background-image;
   transition: --gradientStart 3s, --gradientEnd 3s;
@@ -169,7 +170,7 @@ button {
   }
 }
 
-/* App body -------------------------------------------------------------------*/
+/* App body ------------------------------------------------------------------*/
 .app__content {
   position: relative;
   max-width: var(--maxWidth);
