Tweak toast borders

--- a/src/styles/toaster.pcss
+++ b/src/styles/toaster.pcss
@@ -41,7 +41,7 @@
 
   margin: 5px 10px;
   padding: 10px 20px;
-  border: 2px solid #fcee70;
+  border: 2px solid transparent;
   border-radius: 3px;
   text-align: left;
   box-shadow: 0 5px 5px #0009;
@@ -53,13 +53,16 @@
 }
 
 .toast--info {
+  border-color: yellow;
   background: lemonchiffon;
 }
 
 .toast--success {
+  border-color: green;
   background: palegreen;
 }
 
 .toast--error {
+  border-color: red;
   background: palered;
 }
