--- a/src/styles/toaster.pcss
+++ b/src/styles/toaster.pcss
@@ -41,8 +41,6 @@
 
   margin: 5px 10px;
   padding: 10px 20px;
-  border: 2px solid transparent;
-  border-radius: 3px;
   text-align: left;
   box-shadow: 0 5px 5px #0009;
   
@@ -50,19 +48,16 @@
   &.is-toasted {
     animation: toastOut 1s forwards;
   }
-}
 
-.toast--info {
-  border-color: yellow;
-  background: lemonchiffon;
-}
+  &.toast--info {
+    background: lemonchiffon;
+  }
 
-.toast--success {
-  border-color: green;
-  background: palegreen;
-}
+  &.toast--success {
+    background: palegreen;
+  }
 
-.toast--error {
-  border-color: red;
-  background: palered;
+  &.toast--error {
+    background: palered;
+  }
 }
