--- a/src/styles/toaster.pcss
+++ b/src/styles/toaster.pcss
@@ -40,10 +40,16 @@
   animation: toastIn 1s forwards;
 
   margin: 5px 10px;
-  padding: 10px 20px;
+  padding: 10px 20px 10px 40px;
   text-align: left;
   box-shadow: 0 5px 5px #0009;
-  
+
+  &::before {
+    content: attr(data-icon);
+    position: absolute;
+    left: 16px;
+    top: 6px;
+  }  
 
   &.is-toasted {
     animation: toastOut 1s forwards;
@@ -58,6 +64,6 @@
   }
 
   &.toast--error {
-    background: palered;
+    background: lightcoral;
   }
 }
