--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -20,6 +20,8 @@ body {
   box-sizing: border-box;
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background: #fff;
+
   -webkit-font-smoothing: antialiased;
 } 
 
