--- a/src/styles/toaster.pcss
+++ b/src/styles/toaster.pcss
@@ -42,7 +42,7 @@
   animation: toastIn 1s forwards;
 
   display: flex;
-  // align-items: center;
+  /*align-items: center;*/
 
   margin: 5px 10px;
   text-align: left;
