--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -1,3 +1,7 @@
+@keyframes fade-in {
+  to {opacity: 1}
+}
+
 *, *::before, *::after {
   box-sizing: inherit;
 }
@@ -44,7 +48,7 @@ button {
 
 /* Utility classes -----------------------------------------------------------*/
 .btn--text {
-  transition: background 0.25s;
+  transition: --gradientEnd 1s, background 0.25s;
 
   display: inline-block;
   padding: 2px 5px;
@@ -116,7 +120,7 @@ button {
   }
 
   @media (--mq-l) {
-    top: 60px;
+    top: 30px;
     opacity: 1;
     box-shadow: 0 48px 64px -24px rgba(0, 0, 0, 0.3);
   }
@@ -168,7 +172,7 @@ button {
   letter-spacing: -2px;
 
   @media (--mq-l) {
-    font-size: 212px;
+    font-size: 150px;
   }
 }
 
@@ -280,25 +284,72 @@ button {
   text-align: center;
 }
 
-.acknowledgements {
+.main {
+  position: relative;
+  max-width: 960px;
+  height: 100vh;
+  margin: 150px auto 0;
+  z-index: 0;
+}
+
+.main__gallery,
+.main__acknowledgements{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+}
+
+.main__gallery {
+  display: layout(masonry);
+    --padding: 20;
+    --columns: 5;
+  
+  overflow: auto;
+
+  & img {
+    animation: 1s fade-in forwards;
+    
+    object-fit: cover;
+    opacity: 0;
+  }
+}
+
+.main__acknowledgements {
+  position: absolute;
+
   display: grid;
   place-content: center;
 
-  transition: 1s opacity 0.75s;
+  transition: 2s opacity 2.75s;
   opacity: 0;
-  height: 100vh;
+  pointer-events: none;
 
-  &:target {
+  @nest :target & {
     opacity: 1;
   }
 
+  & p {
+    margin: 1rem 0 0;
+
+    &:first-child {
+      margin: 0;
+    }
+  }
+
   & a[href="#"] {
-    
+    padding: 0.5rem;
+    color: white;
   }
 }
 
 .acknowledgements__content {
   margin: 0 40px;
+  padding: 1rem;
+  pointer-events: auto;
+  box-shadow: 0 5px 10px #0009;
+  background: #fff;
 }
 
 /* Github Corner -------------------------------------------------------------*/
