--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,22 +1,26 @@
-@keyframes fade-in {
-  to {opacity: 1}
+@property --gradientStart {
+  syntax: "<color>";
+  inherits: true;
+  initial-value: #61bfd9;
 }
 
-*, *::before, *::after {
-  box-sizing: inherit;
+@property --gradientEnd {
+  syntax: "<color>";
+  inherits: true;
+  initial-value: #0551b4;
+}
+
+@keyframes fade-in {
+  to {
+    opacity: 1;
+  }
 }
 
 :root {
-   --maxWidth: 1140px;
+  --maxWidth: 1140px;
   --icon-wh: 16px;
 
-  --gradientStart: #61BFD9;
-  --gradientEnd: #0551B4;
-
   will-change: scroll-position;
-
-  height: 100vh;
-  overflow: hidden;
   scroll-behavior: smooth;
 }
 
@@ -121,7 +125,8 @@ button {
   }
 
   @media (--mq-l) {
-    top: 30px;
+    top: 60px;
+    left: -30px;
     opacity: 1;
     box-shadow: 0 48px 64px -24px rgba(0, 0, 0, 0.3);
   }
@@ -134,7 +139,7 @@ button {
   color: #fff;
   z-index: 1;
 
-  @media(--mq-m) {
+  @media (--mq-m) {
     background: none;
   }
 }
@@ -161,7 +166,7 @@ button {
 .description {
   margin: 50px 30px 90px;
 
-  @media(--mq-m) {
+  @media (--mq-m) {
     margin: 80px 0 90px;
   }
 }
@@ -175,6 +180,10 @@ button {
   @media (--mq-l) {
     font-size: 150px;
   }
+
+  @media (--mq-xl) {
+    font-size: 202px;
+  }
 }
 
 .description__strapline {
@@ -182,17 +191,21 @@ button {
   font-size: 24px;
   font-weight: 500;
 
-  @media(--mq-s) {
+  @media (--mq-s) {
     width: 60%;
   }
 
-  @media(--mq-m) {
+  @media (--mq-m) {
     width: 40%;
     font-size: 28px;
   }
 
   @media (--mq-l) {
-    width: 50%;
+    width: 55%;
+  }
+
+  @media (--mq-xl) {
+    width: 55%;
     font-size: 39px;
     text-align: left;
     opacity: 0.7;
@@ -257,9 +270,12 @@ button {
 }
 
 .jeffness__input {
+  flex: 0 0 auto;
+
   transition: --gradientEnd 3s;
 
-  width: 2em;
+  width: 5ch;
+  padding: 0;
   border: 1px solid var(--gradientEnd);
   border-radius: 3px;
   text-align: center;
@@ -293,8 +309,8 @@ button {
   z-index: 0;
 }
 
-.main__gallery,
-.main__acknowledgements{
+.main__quotes,
+.main__acknowledgements {
   position: absolute;
   top: 0;
   left: 0;
@@ -302,18 +318,9 @@ button {
   height: 100vh;
 }
 
-.main__gallery {
-  display: layout(masonry);
-    --padding: 20;
-    --columns: 5;
-
-  overflow: auto;
-
-  & img {
-    animation: 1s fade-in forwards;
-
-    object-fit: cover;
-    opacity: 0;
+.main__quotes {
+  & p {
+    line-height: 1.5;
   }
 }
 
@@ -375,7 +382,6 @@ button {
   position: absolute;
   top: 0;
 
-
   display: block;
   width: var(--wh);
   height: var(--wh);
@@ -402,7 +408,7 @@ button {
     transition: fill 3s;
 
     fill: var(--gradientStart);
-    color:#fff;
+    color: #fff;
 
     @media (--mq-xl) {
       fill: var(--gradientEnd);
